--- a/assets/css/theme_hacker.css
+++ b/assets/css/theme_hacker.css
@@ -72,7 +72,7 @@ label { color: #00aa00; }
 }
 
 button { 
-    all: unset; 
+    border: none; outline: none; 
     border-radius: 8px; 
     padding: 10px 20px; 
     font-weight: 600;
